work-popup.css
.modal1 {
  display: none; /* Hidden by default */
  position: fixed; /* Stay in place */
  z-index: 1 /* Sit on top */;
  left: 0;
  top: 0;
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  overflow: auto; /* Enable scroll if needed */
  background-color: rgb(0, 0, 0);
  background-color: rgba(0, 0, 0, 0.4);
}

/* Modal Content/Box */
.modal-content1 {
  background-color: #fefefe;
  margin: 15% auto; /* 15% from the top and centered */
  padding: 20px;
  border: 1px solid #888;
  width: 80%; /* Could be more or less, depending on screen size */
  border-radius: 8px;
}

/* The Close Button */
.close {
  background: #ebecf0;
  mix-blend-mode: multiply;
  padding: 5px 10px;
  border-radius: 8px;
  color: #aaa;
  float: right;
  font-size: 28px;
  font-weight: bold;
}

.close:hover,
.close:focus {
  color: black;
  text-decoration: none;
  cursor: pointer;
}

.cls-btn {
  margin-bottom: 5%;
}

.modal-image {
  display: flex;
  justify-content: space-around;
  overflow: hidden;
  box-sizing: border-box;
  height: 100vh;
}

.modal-image img {
  width: 100%;
  border-radius: 8px;
  object-fit: cover;
}

.modal-btn {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.modal-btn-template {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  width: 100%;
}

.modal-btn-template a {
  display: flex;
  justify-content: flex-end;
  width: 22%;
  text-decoration: none;
}

.modal-see-live {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  margin-top: 1.5em;
  margin-bottom: 1.5em;
  margin-right: 1%;
  border: none;
  align-self: center;
  background: var(--color-primary);
  font-weight: 500;
  font-size: 16px;
  letter-spacing: 2px;
  padding: 1em 1.5em;
  color: white;
  border-radius: 3px;
}

.modal-see-source {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  margin-top: 1.5em;
  margin-bottom: 1.5em;
  margin-left: 1%;
  border: none;
  align-self: center;
  background: var(--color-primary);
  font-weight: 500;
  font-size: 16px;
  letter-spacing: 2px;
  padding: 1em 1.5em;
  color: white;
  border-radius: 3px;
}

.box-tags-popup {
  display: flex;
  justify-content: flex-start;
  list-style: none;
  padding: 0%;
}

.box-tags-popup li {
  margin: 10px 10px;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  list-style: none;
  padding: 8px 12px;
  background: #ebf0ee;
  color: #3a4a42;
  font-family: Inter, sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 0.75em;
  line-height: 1em;
  letter-spacing: 0.03em;
  border-radius: 4px;
}

h2 {
  display: flex;
  justify-content: flex-start;
  width: 100%;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 32px;
  line-height: 44px;
  color: #172b4d;
}

.modal-p {
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 30px;
  color: #344563;
}

@media (min-width: 365px) {
  .modal-image {
    overflow: hidden;
    box-sizing: border-box;
    border-radius: 8px;
    width: 100%;
    max-height: 50vh;
    object-fit: cover;
  }

  .box-tags-popup {
    display: flex;
    justify-content: center;
    list-style: none;
    padding: 0%;
  }

  .close {
    background: #ebecf0;
    mix-blend-mode: multiply;
    padding: 6px 10px;
    border-radius: 8px;
    color: #aaa;
    float: right;
    font-size: 20px;
    font-weight: bold;
    margin-bottom: 6%;
  }

  .close:hover,
  .close:focus {
    color: black;
    text-decoration: none;
    cursor: pointer;
  }

  .modal-btn-template {
    display: none;
  }

  .modal-btn-template-mob {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
  }

  .modal-btn-template-mob a {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    flex-wrap: wrap;
    align-items: center;
    flex-basis: 40%; /* Adjust the value as needed */
    margin-bottom: 10px; /* Adjust the spacing between buttons */
    text-decoration: none;
  }
}

@media (min-width: 768px) {
  .modal-btn-template-mob {
    display: none;
  }

  .modal-btn {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
  }

  .modal-btn-template {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    width: 100%;
  }

  .modal-btn-template a {
    display: flex;
    justify-content: flex-end;
    width: 22%;
    text-decoration: none;
  }

  .modal-see-live {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    margin-top: 1.5em;
    margin-bottom: 1.5em;
    margin-right: 1%;
    border: none;
    align-self: center;
    background: var(--color-primary);
    font-weight: 500;
    font-size: 16px;
    letter-spacing: 2px;
    padding: 1em 1.5em;
    color: white;
    border-radius: 3px;
  }

  .modal-see-source {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    margin-top: 1.5em;
    margin-bottom: 1.5em;
    margin-left: 1%;
    border: none;
    align-self: center;
    background: var(--color-primary);
    font-weight: 500;
    font-size: 16px;
    letter-spacing: 2px;
    padding: 1em 1.5em;
    color: white;
    border-radius: 3px;
  }
}

